Added support to reset button